color contrast fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,8 @@
 :root {
   --background: #f5dfbb;
   --light-yellow: #fff6e7;
-  --orange: #f2542d;
-  --white: #f4f2f2;
+  --orange: #DB380B;
+  --white: #fff;
   --text: #562c2c;
   --black: #000;
   --green: #0e9594;
